# GeneBench-OpenAI-based

./: .gitignore  Goal.md  PLAN.md  README.md  pyproject.toml  table.md
docs/: paper_reported_metrics.json  paper_reported_metrics.md  validation_findings.md
genebench/: agent.py  cli.py  grader.py  problem.py  runner.py
genebench/models/: anthropic_client.py  base.py
genebench/sandbox/: base.py  local.py
problems/ldl_gwas_followup/: ablations.py  generate.py  meta.yaml  prompt.txt  reference_solution.py
problems/ldl_gwas_followup/tests/: test_ldl.py
tests/: test_agent_loop.py  test_grader.py
